// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResultWrapper should not render empty panoUrl 1`] = `
<section
  className="map-detail-result"
>
  <PanoAlert />
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <styled.header>
      <Heading
        as="h1"
        styleAs="h4"
      >
        title
      </Heading>
      <Heading
        as="h2"
        styleAs="h6"
      >
        subTitle
      </Heading>
    </styled.header>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should not render empty sub title 1`] = `
<section
  className="map-detail-result"
>
  <PanoAlert />
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <styled.header>
      <Heading
        as="h1"
        styleAs="h4"
      >
        title
      </Heading>
    </styled.header>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should not render missing children 1`] = `
<section
  className="map-detail-result"
>
  <PanoAlert />
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <styled.header>
      <Heading
        as="h1"
        styleAs="h4"
      >
        title
      </Heading>
    </styled.header>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should not render missing sub title 1`] = `
<section
  className="map-detail-result"
>
  <PanoAlert />
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <styled.header>
      <Heading
        as="h1"
        styleAs="h4"
      >
        title
      </Heading>
    </styled.header>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;

exports[`MapDetailResultWrapper should render everything 1`] = `
<section
  className="map-detail-result"
>
  <PanoAlert />
  <div
    className="map-detail-result__scroll-wrapper"
  >
    <styled.header>
      <Heading
        as="h1"
        styleAs="h4"
      >
        title
      </Heading>
      <Heading
        as="h2"
        styleAs="h6"
      >
        subTitle
      </Heading>
    </styled.header>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
    <footer
      className="map-search-results__footer"
    >
      <button
        className="map-search-results__button"
        onClick={[MockFunction]}
        title="Volledig weergeven"
        type="button"
      >
        <span
          className="
                    map-search-results__button-icon
                    map-search-results__button-icon--maximize
                  "
        />
        Volledig weergeven
      </button>
    </footer>
  </div>
</section>
`;
